# nfrrlib

cpp/23/configmap/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/23/configmap/cmake/: nfrrconfigConfig.cmake.in
cpp/23/configmap/examples/: main.cpp
cpp/23/configmap/include/nfrrconfig/: nfrrconfig.hpp
cpp/23/configmap/include/nfrrconfig/impl/: all_includes.hpp  basic_config_value.hpp  bcv_impl.hpp  config_details.hpp  enums.hpp  traits.hpp
cpp/23/configmap/nfrrconfig/impl/: basic_config_value.hpp  bcv_impl.hpp
cpp/23/configmap/scripts/: build.sh  clean.sh  run_clang_tidy.sh  run_cppcheck.sh
cpp/23/configmap/tests/: test_configmap.cpp
