cmake_minimum_required(VERSION 3.26)

project(nfrrconfig
    VERSION 0.1.0
    LANGUAGES CXX
)

# Generate compile_commands.json for clangd and other tools
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Option to choose between -std=c++23 and -std=gnu++23
option(NFRRCONFIG_USE_GNU_EXTENSIONS
    "Use GNU++ dialect (-std=gnu++23) instead of -std=c++23"
    OFF
)

# Header-only library
add_library(nfrrconfig INTERFACE)

# Public include directories
target_include_directories(nfrrconfig
    INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

# Request C++23 via compile features (CMake maps this to -std=... for the compiler)
target_compile_features(nfrrconfig INTERFACE cxx_std_23)

# CXX_EXTENSIONS decides whether to use -std=gnu++23 or -std=c++23
if (NFRRCONFIG_USE_GNU_EXTENSIONS)
    set_property(TARGET nfrrconfig PROPERTY CXX_EXTENSIONS ON)
else()
    set_property(TARGET nfrrconfig PROPERTY CXX_EXTENSIONS OFF)
endif()

# Warnings and optimizations for GCC/Clang
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(nfrrconfig
        INTERFACE
            -Wall -Wextra -pedantic
            $<$<CONFIG:Release>:-O3 -march=native -mtune=native -flto=auto>
    )

    # LTO also on link step (-flto=auto lets the compiler decide how to apply LTO)
    target_link_options(nfrrconfig
        INTERFACE
            $<$<CONFIG:Release>:-flto=auto>
    )
endif()

# ------------------------------------------------------------------------------
# Example executable (your main.cpp)
# ------------------------------------------------------------------------------

add_executable(test_configmap
    examples/main.cpp
)

target_link_libraries(test_configmap
    PRIVATE
        nfrrconfig
)

# Install the example executable
install(
    TARGETS test_configmap
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# ------------------------------------------------------------------------------
# Testing with CTest
# ------------------------------------------------------------------------------

include(CTest)   # defines BUILD_TESTING and configures testing infrastructure

if (BUILD_TESTING)
    add_executable(configmap_tests
        tests/test_configmap.cpp
    )

    target_link_libraries(configmap_tests
        PRIVATE
            nfrrconfig
    )

    # Register both the example and the unit tests as CTest tests
    add_test(NAME configmap_example
             COMMAND test_configmap)

    add_test(NAME configmap_unit_tests
             COMMAND configmap_tests)
endif()

# ------------------------------------------------------------------------------
# Installation and package config
# ------------------------------------------------------------------------------

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

# Install the header-only interface library as a target
install(
    TARGETS nfrrconfig
    EXPORT nfrrconfigTargets
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

# Install all public headers (the 'include/' directory)
install(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

# Generate a ConfigVersion file
write_basic_package_version_file(
    "${CMAKE_CURRENT_BINARY_DIR}/nfrrconfigConfigVersion.cmake"
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY AnyNewerVersion
)

# Generate the main Config.cmake from a template
configure_package_config_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/nfrrconfigConfig.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/nfrrconfigConfig.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/nfrrconfig"
)

# Install the exported targets file (generated by install(TARGETS ... EXPORT ...))
install(
    EXPORT nfrrconfigTargets
    NAMESPACE nfrr::
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/nfrrconfig"
)

# Install the configuration files (Config.cmake + ConfigVersion.cmake)
install(
    FILES
        "${CMAKE_CURRENT_BINARY_DIR}/nfrrconfigConfig.cmake"
        "${CMAKE_CURRENT_BINARY_DIR}/nfrrconfigConfigVersion.cmake"
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/nfrrconfig"
)
